--- a/main/static/main/css/reservation.css
+++ b/main/static/main/css/reservation.css
@@ -1,4 +1,5 @@
 body {
+    user-select: none; /* 텍스트 선택 비활성화 */
     font-family: 'Roboto', sans-serif;
     max-width: 1600px;
     margin: 0 auto;
@@ -96,10 +97,14 @@ body {
     justify-content: center;
     border-radius: 8px;
     transition: transform 0.2s, brightness 0.2s;
+    /* 테두리 추가 */
+    border: 2px solid #ccc; /* 기본 테두리 */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
 }
 
 .locker-item:hover {
     transform: scale(1.05);
+    border-color: #007bff; /* Hover 상태에서 테두리 색 변경 */
 }
 
 .locker-item:disabled {
