--- a/main/static/main/css/admin.css
+++ b/main/static/main/css/admin.css
@@ -6,7 +6,8 @@ label {
     margin-bottom: 5px;
 }
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+select { /* select 요소 스타일 추가 */
     width: 100%;
     padding: 8px;
     box-sizing: border-box;
@@ -44,4 +45,19 @@ tbody tr:nth-child(even) {
 /* 모달이 열릴 때 스크롤을 방지하려면 body에 클래스 추가 */
 body.modal-open {
     overflow: hidden;
+}
+
+/* 비활성화된 입력 필드 스타일 */
+.disabled-input {
+    background-color: #e2e8f0; /* 회색 배경 */
+    cursor: not-allowed; /* 커서 변경 */
+    color: #a0aec0; /* 텍스트 색상 변경 */
+}
+
+/* 추가적인 스타일링 (선택 사항) */
+.form-field input[disabled],
+.form-field select[disabled] {
+    background-color: #e2e8f0; /* 회색 배경 */
+    cursor: not-allowed; /* 커서 변경 */
+    color: #a0aec0; /* 텍스트 색상 변경 */
 }
