--- a/main/static/main/css/admin.css
+++ b/main/static/main/css/admin.css
@@ -48,7 +48,7 @@ body.modal-open {
 }
 
 /* 비활성화된 입력 필드 스타일 */
-.disabled-input {
+.readonly-input {
     background-color: #e2e8f0; /* 회색 배경 */
     cursor: not-allowed; /* 커서 변경 */
     color: #a0aec0; /* 텍스트 색상 변경 */
